# stannis

./: .gitignore  Cargo.toml  Makefile
src/: bestclient.rs  colors.rs  commands.rs  contacts.rs  prompt.rs  stannis.rs  ui.rs  utfbuf.rs
src/term/: cwidth.rs  mod.rs
