[package]
name = "stannis"
version = "0.0.1"
authors = [ "" ]

[dependencies.tox]
git = "https://github.com/mahkoh/rust-tox.git"

[dependencies.ncurses]
git = "https://github.com/mahkoh/cargocurses.git"

[dependencies.signals]
git = "https://github.com/mahkoh/signals.rs.git"

[dependencies.fdpoll]
git = "https://github.com/mahkoh/fdpoll.rs.git"

[[bin]]
name = "stannis"
